# FastAPITasks

./: pyproject.toml
src/: main.py
src/core/: celery.py
src/core/database/: db.py
src/core/database/alembic/: env.py
src/core/database/alembic/versions/: 71c20dc61d5d_.py  d2b8ca9bb7f1_init.py
src/core/database/models/: __init__.py  common.py  task.py
src/core/settings/: settings.py
src/dependencies/: pagination.py
src/routers/v1/: tasks.py
src/schemas/: common.py  task.py
src/services/: random_number.py
src/tasks/: tasks.py
