[project]
name = "fastapitasks"
version = "1.0.0"
description = ""
authors = [
    {name = "damir",email = "damiraminov1@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
